--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_script:
 - git checkout -qf $TRAVIS_BRANCH
 - git clone --branch v2 https://github.com/go-yaml/yaml $GOPATH/src/gopkg.in/yaml.v2
 - go get -u -v github.com/spf13/hugo
-- git config user.email "systems+crunchbot@crunch.io"
-- git config user.name "Crunchbot"
+- git config --global user.email "systems+crunchbot@crunch.io"
+- git config --global user.name "Crunchbot"
 script:
 - git clone https://github.com/jeblister/kube.git ./themes/kube
 - hugo
